--- a/exercicio/desafio012/estilo/style.css
+++ b/exercicio/desafio012/estilo/style.css
@@ -1,23 +1,37 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1: Verdana;
+    --fonte2: 'Passione one';
+    --fonte3: 'sriracha',cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
     min-height: 100%;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 header {
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
 }
 
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 }
 
 header > p {
@@ -39,6 +53,13 @@ section {
     padding-bottom: 10%;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3.5vw;
+}
+
+section {
+    padding-bottom: 2em;
+
 }
 
 section.normal {
@@ -49,11 +70,27 @@ section.normal {
 section.imagem {
     background-color: rgb(61, 61, 61);
     color: white;
+    box-shadow: inset 6x 6px 13px 0px rgba(0, 0, 0, 0.534);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
    width: 400px;
-   background-color: rgba(0, 0, 0, 0.164);
+   background-color: rgba(0, 0, 0, 0.514);
+   text-shadow: 1px 1px 0px black ;
+}
+
+section#img01 {
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+   
+}
+
+section#img02 {
+    background-image: url(../imagens/background002.jpg);
+    background-position: right center;
+    
 }
 
 footer {
